# pathfinder

./: .gitignore  CMakeLists.txt  readme.md
lib/imgui/: CMakeLists.txt
pathfinder/: CMakeLists.txt
pathfinder/include/pathfinder/: algorithm.h  bfs.h  breadth_first_search.h  constants.h  dfs.h  dijkstra.h  execution_parameters.h  grid.h  node.h  pathfinder_algorithm.h  pathfinder_algorithms.h  pathfinder_context.h  pathfinder_result.h  position.h  result.h  step.h  utils.h
pathfinder/src/: bfs.cpp  breadth_first_search.cpp  dfs.cpp  dijkstra.cpp  grid.cpp  node.cpp  pathfinder_context.cpp  utils.cpp
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: algorithm_manager.h  aliases.h  application.h  cell.h  constants.h  event_handler.h  grid_manager.h  mouse_click_type.h  position.h  renderer.h  settings.h  state_manager.h  timer.h  ui_elements_manager.h  ui_elements_observers.h  utils.h
src/gui/src/: algorithm_manager.cpp  application.cpp  event_handler.cpp  grid_manager.cpp  renderer.cpp  state_manager.cpp  ui_elements_manager.cpp  utils.cpp
src/main/: CMakeLists.txt  main.cpp
src/pathfinder/: CMakeLists.txt
src/pathfinder/include/pathfinder/: astar.h  breadth_first_search.h  dijkstra.h  execution_parameters.h  grid.h  node.h  pathfinder_algorithm.h  pathfinder_algorithms.h  pathfinder_context.h
src/pathfinder/src/: astar.cpp  breadth_first_search.cpp  dijkstra.cpp  grid.cpp  node.cpp  pathfinder_context.cpp
test/: CMakeLists.txt
test/src/: helpers.cpp  helpers.h  sample_grids.h  test_algorithm.cpp  test_bfs.cpp  test_grid.cpp  test_helpers.cpp  test_node.cpp  test_pathfinder_algorithms.cpp  test_pathfinder_context.cpp  test_position.cpp  test_utils.cpp
